--- a/web/index.htm
+++ b/web/index.htm
@@ -8,14 +8,15 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/main.css" rel="stylesheet" media="screen">
   </head>
-  <body ng-app class="row">
-    <sidebar class="col-md-2"></sidebar>
+  <body ng-app class="">
+ 
     
-    <ng-view class="col-md-10">
+    <ng-view class="col-md-12">
           
     </ng-view>
     <script type="application/dart" src="main.dart"></script>
     <script src="packages/browser/dart.js"></script>
+    <script src="packages/shadow_dom/shadow_dom.min.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
